fixed bug where content hidden under footer

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,7 @@ footer {
     width: 100%;
     padding: 20px;
     border-radius: 20px 20px 0 0;
+    background-color: white;
     color: #80868A;
     font-size: 12px;
     -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
@@ -67,6 +68,11 @@ footer a {
     text-decoration: none;
     display: flex;
     flex-direction: column;
+}
+
+.clear {
+    clear: both;
+    height: 70px;
 }
 
 .active {
